# pyFosControl

./: .gitignore  README.md  camtest.py  foscam_cli.py  pyproject.toml  snapshot.py
docs/: cert-checking.md
foscontrol/: __init__.py
foscontrol/camera/: __init__.py  base.py  extended.py  result.py
foscontrol/cli/: __init__.py  main.py
foscontrol/utils/: __init__.py  arrays.py  dictionaries.py  network.py
