[tool.poetry]
name = "foscontrol"
version = "0.2.0"
description = "Python interface to Foscam CGI API"
authors = ["Jachimo <you@example.com>"]
license = "GPL-2.0-only"
readme = "README.md"
homepage = "https://github.com/MStrecke/pyFosControl"
repository = "https://github.com/MStrecke/pyFosControl"
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
    { include = "foscontrol" }
]

[tool.poetry.dependencies]
python = "^3.8"
# Optional dependencies for low-level sniffing functionality
dpkt = { version = "^1.9.7", optional = true }
python-libpcap = { version = "^0.4.2", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[tool.poetry.extras]
sniff = ["dpkt", "python-libpcap"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
foscam_cli = "foscontrol.cli.main:main"
